--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ thiserror = "1.0"
 
 [dev-dependencies]
 bincode = "1.3"
+once_cell = "1.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.13"
